syntax = "proto3";

message Report{
    repeated AspireMQ AspireMQ =1;
    repeated Product Product = 2;
    repeated Consumer Consumer =3;
}

message AspireMQ{
    string  Addr = 1;
}

message Product{
    string  Addr = 1;
}

message Consumer{
    string  Addr = 1;
}